--- a/index.html
+++ b/index.html
@@ -1,1 +1,56 @@
-<h1>Hello world</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/font-awesome.css" />
+    <link rel="stylesheet" href="css/bootstrap.css" />
+    <link rel="stylesheet" href="  b" />
+    <title>HTML + WIP of 1 Element (JS or CSS animation)</title>
+  </head>
+  <body>
+    <header>
+      <!-- Navigation -->
+      <nav class="navbar navbar-expand-sm fixed-top sticky-top d-flex">
+        <div class="container">
+            <a href="index.html" style="margin-left: 0px;"
+              ><img src="images/logo.png" class="logo"
+            /></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="navbar-nav align-items-center">
+              <li class="nav-item">
+                <a class="nav-link text-black" href="#">Products</a>
+              </li>
+              <li class="nav-item1">
+                <a class="nav-link text-black" href="#">About</a>
+              </li>
+              <li class="nav-item-btn">
+                <a class="btn btn-outline-light ms-3" href="#">Insights</a>
+              </li>
+            </li>
+            <li class="nav-item-search">
+              <a class="images/search" href="#">Insights</a>
+            </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <!-- Header -->
+      <header class="header">
+        <!-- Hero -->
+        <section class="header d-flex">
+        <header class="hero-section d-flex align-items">
+          <div class="container text-left text-white">
+            <h1 class="fw-light">STRAW</h3>
+            <h1 class="display-3 fw-bold ">BERRY</h1>
+            <p class="lead">Sip into sweetness with our refreshing strawberry drink bursting with juicy flavor for a taste of pure delight.</p>
+            <a href="#" class="btn btn-outline-light mt-3">ORDER NOW</a>
+          </div>
+        </header>
+      </section>
+    <main>
