--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
               </li>
             </li>
             <li class="nav-item-search">
-              <a class="images/search" href="#">Insights</a>
+              <a href="index.html" style="margin-left: 0px;"
+              ><img src="images/logo.png" class="logo"
+            /></a>
             </li>
             </ul>
           </div>
