--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </li>
             <li class="nav-item-search">
               <a href="index.html" style="margin-left: 0px;"
-              ><img src="images/logo.png" class="logo"
+              ><img src="images/search.png" class="search"
             /></a>
             </li>
             </ul>
