--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <!-- Hero -->
         <section class="header d-flex">
         <header class="hero-section d-flex align-items">
-          <div class="container text-left text-white">
+          <div class="container text-left text-black">
             <h1 class="fw-light">STRAW</h3>
             <h1 class="display-3 fw-bold ">BERRY</h1>
             <p class="lead">Sip into sweetness with our refreshing strawberry drink bursting with juicy flavor for a taste of pure delight.</p>
