--- a/index.html
+++ b/index.html
@@ -47,11 +47,21 @@
         <!-- Hero -->
         <section class="header d-flex">
         <header class="hero-section d-flex align-items">
-          <div class="container text-left text-black">
-            <h1 class="fw-light">STRAW</h3>
+          <div class="container text-right text-black">
+            <h1 class="fw-light">STRAW</h1>
             <h1 class="display-3 fw-bold ">BERRY</h1>
             <p class="lead">Sip into sweetness with our refreshing strawberry drink bursting with juicy flavor for a taste of pure delight.</p>
             <a href="#" class="btn btn-outline-light mt-3">ORDER NOW</a>
+            <li class="container picture-left">
+              <a href="index.html" style="margin-left: 0px;"
+              ><img src="images/Drink.png" class="drink"
+            /></a>
+            </li>
+            <li class="container picture-left">
+              <a href="index.html" style="margin-left: 0px;"
+              ><img src="images/bubble.png" class="bubble"
+            /></a>
+            </li>
           </div>
         </header>
       </section>
