--- a/index.html
+++ b/index.html
@@ -55,15 +55,16 @@
 
   <!-- PAGE 4: SMOOTH LETTER MOVE -->
   <section id="page4" class="page hidden">
-    <h1 id="moveLetters">S T R A W B E R R Y</h1>
+    <h1 id="moveLetters">STRAW</h1>
+    <h1 id="moveLetter1">BERRY</h1>
   </section>
 
   <!-- PAGE 5: HOVER ANIMATION -->
   <section id="page5" class="page hidden">
     <div class="final-hero">
-      <h1 class="hover-text">STRAWBERRY VANILLA</h1>
+      <h1 class="hover-text">STRAWBERRY</h1>
       <div class="hover-can">
-        <img src="https://i.ibb.co/Z8JHqvQ/strawberry-soda.png" alt="drink" />
+        <img src="images/Drink.png" alt="drink" />
       </div>
     </div>
   </section>
