--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <!-- PAGE 5: HOVER ANIMATION -->
   <section id="page5" class="page hidden">
     <div class="final-hero">
-      <h1 class="hover-text">STRAWBERRY</h1>
+      <h1 class="hover-text">STRAWBERRY VANILLA</h1>
       <div class="hover-can">
         <img src="images/Drink.png" alt="drink" />
       </div>
