--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
   </div>
 
   <!-- PAGE 3 -->
-  <section id="page3" class="page hidden">
-    <h1 id="centerText">STRAWBERRY VANILLA</h1>
+  <section id="page3" class="text-move">
+    <h1 id="centerText-left">STRAW</h1>
+    <h1 id="centerText-right">BERRY</h1>
   </section>
 
   <!-- PAGE 4: SMOOTH LETTER MOVE -->
